@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add '!' to pickup to toggle the mode.
+ lib/help/pickup.en
+ server/c_object.c
+Nicolas Weeger 2010-03-25
+
 Basic help text for filtering.
 Nicolas Weeger 2010-03-25
 
